--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,8 @@
-.not-found,
-.profilesList {
+
+body {
+  margin: 0;
   display: flex;
-  flex-direction: column;
-  height: 100vh;
-  gap: 5px;
-  font-size: 24px;
-  color: #333;
-}
-.profilesContainer {
-  display: flex;
-  gap: 10px;
-  height: 100vh;
-  align-items: baseline;
+  place-items: center;
+  min-width: 320px;
+
 }
